sfdx-source/main/default/objects/ServiceResource/fields/PC_Assigned_Specialty__c.field-meta.xml
<CustomField>
    <fullName>PC_Assigned_Specialty__c</fullName>
    <label>Assigned Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PC_Specialties</valueSetName>
    </valueSet>
</CustomField>