sfdx-source/main/default/objects/ServiceResource/fields/PC_Location__c.field-meta.xml
<CustomField>
    <fullName>PC_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>