sfdx-source/main/default/objects/ServiceResource/fields/PC_Online__c.field-meta.xml
<CustomField>
    <fullName>PC_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online</label>
    <type>Checkbox</type>
</CustomField>