sfdx-source/main/default/objects/ServiceResource/recordTypes/PC_Resource.recordType-meta.xml
<RecordType>
    <fullName>PC_Resource</fullName>
    <active>true</active>
    <description>Used for a provider connect specific service resource</description>
    <label>Provider Connect Resource</label>
</RecordType>