sfdx-source/main/default/objects/ServiceResource/recordTypes/VCC_Medical_Provider.recordType-meta.xml
<RecordType>
    <fullName>VCC_Medical_Provider</fullName>
    <active>true</active>
    <description>Medical Providers who can be Service Resources for VCV Appointment Scheduling</description>
    <label>VAHC Medical Provider</label>
</RecordType>