sfdx-source/main/default/objects/ServiceResource/listViews/Appt_Viewer_Medical_Providers.listView-meta.xml
<ListView>
    <fullName>Appt_Viewer_Medical_Providers</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Appt Viewer Medical Providers</label>
</ListView>